--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
 
         <div id="footer">
-
+            <p class="copyright">Powered by <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a></p>
         </div>
     </div>
 </body>
