--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gourmet au Catering</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     <div id="main">
@@ -33,7 +34,7 @@
                 <div class="col col-2">
                     <img src="./assets/img/about.jpg" alt="about" class="about-img">
                 </div>
-                <div class="col col-2">
+                <div class="col col-2 s-col-1">
                     <h2 class="ls-5 section-header">About Catering</h2>
                     <h3 class="ls-5 section-sub-header">Tradition since 1889</h3>
                     <p class="about-body">
@@ -47,7 +48,7 @@
             <hr>
             <!-- Menu section -->
             <div id="menu" class="row content-section">
-                <div class="col col-2">
+                <div class="col col-2 m-col-1 s-col-1">
                     <h2 class="ls-5 section-header">Our Menu</h2>
                     <ul class="menu-list-item">
                         <li>
@@ -73,7 +74,7 @@
                     </ul>
                 </div>
 
-                <div class="col col-2">
+                <div class="col col-2 m-col-1 s-col-1">
                     <img src="./assets/img/menu.jpg" alt="menu" class="menu-img">
                 </div>
             </div>
@@ -84,7 +85,7 @@
                 <div class="contact-body">
                     <p>We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us</p>
                     <h3 class="contact-address">Catering Service, 42nd Living St, 43043 New York, NY</h3>
-                    <p>You can also contact us by phone 00553123-2323 or email catering@catering.com, or you can send us a message here:</p>
+                    <p>You can also contact us by phone <a href="tel:+00553123-2323">00553123-2323</a> or email <a href="mailto:catering@catering.com">catering@catering.com</a>, or you can send us a message here:</p>
                     <form action="" class="contact-form">
                         <input type="text" class="form-control" name="name" placeholder="Name">
                         <input type="number" class="form-control" name="quantity" placeholder="How many people">
